# exync

./: README.md  udo systemctl start nginx
apps/cfg/: engineering.csv  glances.conf  glances_bk.conf  monitoring.cfg  nodeset.xml  opcua_cert.der  opcua_key.der  regi.json  routing.csv  syscfg.json
edgeInstallPackage_v2/: auxiliaryInstall.sh  copyFromOPC.sh  copyToOPC.sh  install_Edge.sh  uninstall_Edge.sh
edgeInstallPackage_v2/machDbSet/: MWA.conf  createTable.sh  createTable.sql  restartMWA.sh  setTsDb.sh
edgeInstallPackage_v2/pythonPackages/: Flask_Bootstrap-3.3.7.1-py3-none-any.whl  Flask_SocketIO-4.3.2-py2.py3-none-any.whl  docker-4.2.2-py2.py3-none-any.whl  paho_mqtt-1.5.0-py3-none-any.whl
edgeInstallPackage_v2/pythonPackages35/: Flask_Bootstrap-3.3.7.1-cp35-none-any.whl  paho_mqtt-1.5.0-cp35-none-any.whl  visitor-0.1.3-cp35-none-any.whl
gatewayHostPackage_v2/projects/: .dna_decrypt  DockerHandler.py  FlaskAppWrapper.py  GwConfig.py  MqttHandler.py  gatewayWeb.py  requirements.txt  run.sh  startGatewayWeb.sh  stopGatewayWeb.sh
gatewayHostPackage_v2/training/: MWA.conf  (+4 more)
install/: 01_install.sh  02_install_rabiitmq.sh  03_install_cjson.sh  04_install_open62541.sh  05_install_rabbitmq-c.sh  06_install_python.sh  07_install_python_package.sh  08_install_influx.sh  09_install_Lynis.sh  10_install_mariadb.sh  11_install_grafana.sh  13_install_certbot.sh  14_install_systemctl_service.sh  install_all.sh  nap version  smartfactory.sql
mtsdb/: CMakeLists.txt  common.h  config.c  config.h  decrypt.c  decrypt.h  log.c  log.h  main.c  tsdb.c  tsdb.h  work.c  work.h
(+174 files in other folders)
